# django-celeryx

./: .gitignore  .pre-commit-config.yaml  PLAN.md  README.md  REQUIREMENTS.md  REVIEW.md  mkdocs.yml  pyproject.toml
.claude/projects/-home-ohaas-e1--django-celeryx/memory/: MEMORY.md  feedback_copy_flower.md  feedback_db_only.md
.github/workflows/: ci.yml  publish.yml  tag.yml
0.1.0a1/: 404.html  index.html  sitemap.xml
0.1.0a1/getting-started/installation/: index.html
0.1.0a1/getting-started/quickstart/: index.html
0.1.0a1/reference/api/: index.html
0.1.0a1/reference/changelog/: index.html
0.1.0a1/search/: search_index.json
0.1.0a1/user-guide/broker/: index.html
0.1.0a1/user-guide/configuration/: index.html
0.1.0a1/user-guide/dashboard/: index.html
0.1.0a1/user-guide/tasks/: index.html
0.1.0a1/user-guide/workers/: index.html
django_celeryx/: __init__.py  apps.py  db_models.py  db_router.py  helpers.py  metrics.py  settings.py  types.py  urls.py
django_celeryx/admin/: __init__.py  actions.py  admin.py  apps.py  filters.py  helpers.py  models.py  queryset.py  urls.py
django_celeryx/admin/migrations/: 0001_initial.py  0002_remove_taskevent_celeryx_task_uuid_idx_and_more.py  0003_rename_event_to_state.py
django_celeryx/admin/templates/admin/django_celeryx/: change_list.html  dashboard.html
django_celeryx/admin/templates/admin/django_celeryx/dashboard/: change_list.html
django_celeryx/admin/templates/admin/django_celeryx/task/: apply.html  change_form.html  change_list.html
django_celeryx/admin/templates/admin/django_celeryx/worker/: change_form.html  change_list.html
django_celeryx/admin/templatetags/: celeryx_tags.py
django_celeryx/admin/views/: __init__.py  apply_task.py  base.py  broker.py  dashboard.py  task_detail.py  worker_detail.py
django_celeryx/control/: __init__.py  tasks.py  workers.py
django_celeryx/state/: __init__.py  events.py  metrics.py  persistence.py  tasks.py  workers.py
django_celeryx/unfold/: __init__.py  admin.py  apps.py  models.py
docs/: index.md
docs/getting-started/: installation.md  quickstart.md
docs/reference/: api.md  changelog.md
docs/user-guide/: broker.md  configuration.md  dashboard.md  tasks.md  workers.md
examples/simple/: docker-compose.yml  manage.py  run.sh
examples/simple/example/: apps.py  celery.py  settings.py  startup.py  tasks.py  urls.py  wsgi.py
examples/simple/example/management/commands/: send_tasks.py
main/: 404.html  index.html  sitemap.xml
main/getting-started/installation/: index.html
main/getting-started/quickstart/: index.html
main/reference/api/: index.html
main/reference/changelog/: index.html
main/search/: search_index.json
main/user-guide/broker/: index.html
main/user-guide/configuration/: index.html
main/user-guide/dashboard/: index.html
main/user-guide/tasks/: index.html
main/user-guide/workers/: index.html
tests/: conftest.py  test_metrics.py  test_settings.py
tests/admin/: conftest.py  test_views.py
tests/fixtures/: __init__.py  containers.py  settings.py
tests/settings/: base.py  unfold.py
tests/state/: test_persistence.py
