[project]
name = "django-celeryx"
version = "0.1.0a1"
description = "Celery monitoring and management for Django admin"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["django", "celery", "monitoring", "admin", "flower"]
authors = [{ name = "Oliver Haas", email = "ohaas@e1plus.de" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 5.2",
  "Framework :: Django :: 6.0",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries",
  "Topic :: System :: Monitoring",
  "Typing :: Typed",
]
dependencies = ["Django>=5.2,<7"]

[project.optional-dependencies]
celery = ["celery>=5.4,<6"]
celery-asyncio = ["celery-asyncio>=6.0.0a1"]
unfold = ["django-unfold>=0.70.0"]

[project.urls]
Homepage = "https://github.com/oliverhaas/django-celeryx"
Documentation = "https://oliverhaas.github.io/django-celeryx/"
Repository = "https://github.com/oliverhaas/django-celeryx.git"
Changelog = "https://oliverhaas.github.io/django-celeryx/reference/changelog/"

[dependency-groups]
dev = [
  "beautifulsoup4==4.14.3",
  "celery==5.6.2",
  "django-stubs==5.2.9",
  "mypy==1.19.1",
  "pre-commit==4.5.1",
  "pytest-cov==7.0.0",
  "pytest-django==4.12.0",
  "pytest-mock==3.15.1",
  "pytest-xdist==3.8.0",
  "pytest==9.0.2",
  "redis==7.3.0",
  "ruff==0.15.5",
  "testcontainers==4.14.1",
  "ty==0.0.21",
  "types-docker==7.1.0.20260109",
]
docs = ["mkdocs==1.6.1", "mkdocs-material==9.7.3", "mike==2.1.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["django_celeryx"]

[tool.hatch.build.targets.sdist]
include = ["django_celeryx", "LICENSE", "README.md"]

[tool.ruff]
target-version = "py313"
line-length = 120
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",   # Conflicts with ruff-format
  "D",        # Docstrings - will add incrementally
  "E501",     # Line length handled by config
  "EM",       # Exception strings inline are fine
  "FBT",      # Boolean params are fine for control actions
  "PLR0913",  # Too many args - control commands have many options
  "PLR2004",  # Magic values like task states are domain-specific
  "SLF001",   # Private member access needed for Celery internals
  "TRY003",   # Long exception messages are helpful for debugging
  "TRY300",   # return in try block is cleaner for this pattern
  "ANN401",   # Any is correct for in-memory state and generic admin patterns
  "ARG002",   # Unused args: Django admin method signatures require specific params
  "PLC0415",  # Dynamic imports intentional (Django lazy loading, Celery app detection)
  "SIM108",   # Ternary not always clearer
  "TD002",    # TODO author not needed
  "TD003",    # TODO issue link not needed
  "FIX002",   # TODOs are fine during development
  "ERA001",   # Commented-out code in TODO blocks is fine during development
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-none-returning = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "ANN",    # Type annotations not required in tests
  "ARG",    # Unused arguments common in fixtures
  "DTZ005", # Timezone-naive datetime okay in tests
  "F841",   # Unused variables okay in tests
  "FBT",    # Boolean args fine in test fixtures and test calls
  "PT006",  # Parametrize tuple style is preference
  "PT011",  # Broad pytest.raises okay in some tests
  "PT013",  # pytest import style is preference
  "PT018",  # Compound assertions okay in tests
  "RUF002", # Unicode in docstrings is fine
  "RUF015", # next(iter()) vs slice is preference
  "S101",   # assert in tests
  "S105",   # Hardcoded passwords in test settings
  "S311",   # random is fine for tests
  "TC003",  # We don't force TYPE_CHECKING imports in tests
]
"examples/**" = [
  "ANN",    # Type annotations not required in examples
  "INP001", # Examples are standalone projects, not namespace packages
  "S105",   # Hardcoded passwords in example settings
  "S311",   # random is fine for examples
  "PTH",    # os.path is fine in examples
]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
pretty = true
show_error_codes = true
show_error_context = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = false

[tool.django-stubs]
django_settings_module = "tests.settings.base"

[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "testcontainers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "xdist.scheduler"
ignore_missing_imports = true

[tool.ty.rules]
invalid-method-override = "ignore"

[tool.ty.environment]
python-version = "3.13"

[tool.ty.analysis]
respect-type-ignore-comments = false

[[tool.ty.overrides]]
include = ["tests/**"]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"
invalid-assignment = "ignore"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "settings.base"
addopts = "--cov=django_celeryx --cov-report=term-missing --cov-report=xml --no-cov-on-fail"
pythonpath = ["tests"]
testpaths = ["tests"]
xfail_strict = true

[tool.coverage.run]
omit = [
  "tests/*",
  "django_celeryx/unfold/*",
  "django_celeryx/types.py",
]

[tool.coverage.report]
precision = 2
skip_covered = true
